--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,406 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Mi proyecto integrador</h1>
+    <!-- Navbar -->
+    <header class="p-2 bg-primary">
+      <nav class="container navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Mi Web</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./catalogos.html">Catálogos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./crear-catalogo.html">Crear catálogo</a>
+              </li>
+            </ul>
+            <a class="btn btn-secondary me-4" href="./iniciar-sesion.html"
+              >Iniciar Sesión</a
+            >
+            <a class="btn btn-outline-light" href="./registrarse.html"
+              >Registrate</a
+            >
+          </div>
+        </div>
+      </nav>
+      <!-- Hero section -->
+      <section class="container text-white">
+        <div class="row align-items-center">
+          <div class="col-lg-6 my-5">
+            <h1 class="mb-3">Crea tu catálogo para vender tus productos</h1>
+            <p class="text-white-50 mb-5">
+              Decide como quieres mostrar tus productos, crea tus catálogos de
+              manera rápida y sencilla.
+            </p>
+            <a class="btn btn-secondary rounded-pill py-2 px-4 me-3" href="./catalogos.html">
+              Ver catálogos
+            </a>
+          </div>
+          <div class="col-lg-6 my-5 px-5">
+            <img
+              class="img-fluid"
+              src="./assets/main-image.svg"
+              alt="Imagen principal"
+            />
+          </div>
+        </div>
+      </section>
+    </header>
+    <!-- Main content -->
+    <main>
+      <!-- Features section -->
+      <section class="py-5" style="background-color: #f4f6fc">
+        <h6 class="text-center pb-2">Características</h6>
+        <h2 class="text-center pb-4">
+          Una mejor manera de mostrar tus productos
+        </h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-6 col-xl-4 p-2">
+              <div class="bg-white p-4 rounded-3 shadow-sm">
+                <img
+                  class="mb-3"
+                  src="./assets/icons/people-icon.svg"
+                  alt="Personas"
+                />
+                <h3 class="mb-3">Primero el cliente</h3>
+                <p class="text-black-50">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto modi qui eum molestias odit autem officia blanditiis
+                  voluptate obcaecati voluptatum ipsa et provident, velit atque
+                  nemo eos itaque saepe ducimus!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 p-2">
+              <div class="bg-white p-4 rounded-3 shadow-sm">
+                <img
+                  class="mb-3"
+                  src="./assets/icons/check-icon.svg"
+                  alt="Personas"
+                />
+                <h3 class="mb-3">Prueba antes de comprar</h3>
+                <p class="text-black-50">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto modi qui eum molestias odit autem officia blanditiis
+                  voluptate obcaecati voluptatum ipsa et provident, velit atque
+                  nemo eos itaque saepe ducimus!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 p-2">
+              <div class="bg-white p-4 rounded-3 shadow-sm">
+                <img
+                  class="mb-3"
+                  src="./assets/icons/pencil-icon.svg"
+                  alt="Personas"
+                />
+                <h3 class="mb-3">Personaliza todo</h3>
+                <p class="text-black-50">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto modi qui eum molestias odit autem officia blanditiis
+                  voluptate obcaecati voluptatum ipsa et provident, velit atque
+                  nemo eos itaque saepe ducimus!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 p-2">
+              <div class="bg-white p-4 rounded-3 shadow-sm">
+                <img
+                  class="mb-3"
+                  src="./assets/icons/question-icon.svg"
+                  alt="Personas"
+                />
+                <h3 class="mb-3">Soporte 24/7</h3>
+                <p class="text-black-50">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto modi qui eum molestias odit autem officia blanditiis
+                  voluptate obcaecati voluptatum ipsa et provident, velit atque
+                  nemo eos itaque saepe ducimus!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 p-2">
+              <div class="bg-white p-4 rounded-3 shadow-sm">
+                <img
+                  class="mb-3"
+                  src="./assets/icons/timer-icon.svg"
+                  alt="Personas"
+                />
+                <h3 class="mb-3">Comienza de inmediato</h3>
+                <p class="text-black-50">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto modi qui eum molestias odit autem officia blanditiis
+                  voluptate obcaecati voluptatum ipsa et provident, velit atque
+                  nemo eos itaque saepe ducimus!
+                </p>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 p-2">
+              <div class="bg-white p-4 rounded-3 shadow-sm">
+                <img
+                  class="mb-3"
+                  src="./assets/icons/note-icon.svg"
+                  alt="Personas"
+                />
+                <h3 class="mb-3">Fácil de empezar</h3>
+                <p class="text-black-50">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto modi qui eum molestias odit autem officia blanditiis
+                  voluptate obcaecati voluptatum ipsa et provident, velit atque
+                  nemo eos itaque saepe ducimus!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Questions section -->
+      <section class="container">
+        <div class="row py-5">
+          <div class="pb-4 col-12 col-lg-4">
+            <h2>Preguntas Frecuentes</h2>
+            <p class="" style="color: #2405f2">
+              Contáctanos para más información
+            </p>
+          </div>
+          <div class="col-12 col-lg-8">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true"
+                    aria-controls="collapseOne"
+                  >
+                    Pregunta #1
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse show"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Dicta aspernatur at cupiditate minus, nam blanditiis
+                    praesentium reprehenderit ullam architecto consectetur cum
+                    vero odio inventore repellat reiciendis illum ex
+                    consequuntur temporibus?
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    Pregunta #2
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Placeat natus nisi repellat sequi repudiandae sapiente
+                    eligendi, consequuntur vel! Dignissimos sunt delectus eos
+                    architecto quia mollitia accusantium inventore? Quia, fuga.
+                    Possimus.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    Pregunta #3
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Blanditiis quas sunt corporis mollitia rerum voluptate
+                    dolores repellat quod repudiandae dolore accusamus qui,
+                    suscipit, quis ea minima aspernatur, fuga cumque non.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Contact Section -->
+      <section>
+        <div class="container py-5">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-6 p-5">
+              <h1 class="mb-4">Crea tu catálogo de manera rápida</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                commodi facilis quos voluptatibus, ipsum cumque quibusdam?
+                Asperiores veritatis recusandae, tenetur ex ullam corrupti
+                temporibus ad perspiciatis deleniti! Consequatur, ratione est.
+              </p>
+            </div>
+            <div class="col-12 col-lg-6 bg-primary text-white p-5 rounded-4">
+              <h2 class="mb-3">Contáctanos</h2>
+              <p class="text-white-50 mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia beatae molestiae, cumque tempore, ex illum suscipit eum
+                dolor quia doloribus earum quibusdam necessitatibus, laudantium
+                consequuntur! Deleniti vel architecto quasi? Non!
+              </p>
+              <div class="mb-3">
+                <label for="name" class="form-label">Nombre</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="Tu nombre"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Correo</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="name"
+                  placeholder="tucorreo@gmail.com"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="question" class="form-label">Tus dudas aqui</label>
+                <textarea
+                  class="form-control"
+                  id="question"
+                  rows="5"
+                ></textarea>
+              </div>
+              <div class="row justify-content-center mt-5">
+                <button class="btn btn-secondary col-11 px-5 py-2 rounded-pill">
+                  Contactar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Blog section -->
+      <section class="py-5">
+        <div class="container">
+          <h1 class="mb-4">Nuestro blog</h1>
+          <div class="row">
+            <div class="col-12 col-lg-4 p-3">
+              <div class="shadow-sm rounded-4">
+                <img
+                  class="img-fluid"
+                  src="./assets/blog-1.avif"
+                  alt="Blog image"
+                />
+                <div class="p-4">
+                  <h6 class="text-black-50 mb-4">19 de Enero 2022</h6>
+                  <h4 class="mb-4">
+                    Cómo un cliente aumento sus ventas gracias a tener un mejor
+                    catálogo de productos
+                  </h4>
+                  <p class="text-black-50">
+                    Ve como un cliente pudo mejorar sus ventas al utilizar
+                    nuestro servicio.
+                  </p>
+                  <a href="/" class="btn px-0">Leer Más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-4 p-3">
+              <div class="shadow-sm rounded-4">
+                <img
+                  class="img-fluid"
+                  src="./assets/blog-1.avif"
+                  alt="Blog image"
+                />
+                <div class="p-4">
+                  <h6 class="text-black-50 mb-4">19 de Enero 2022</h6>
+                  <h4 class="mb-4">
+                    Cómo un cliente aumento sus ventas gracias a tener un mejor
+                    catálogo de productos
+                  </h4>
+                  <p class="text-black-50">
+                    Ve como un cliente pudo mejorar sus ventas al utilizar
+                    nuestro servicio.
+                  </p>
+                  <a href="/" class="btn px-0">Leer Más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-4 p-3">
+              <div class="shadow-sm rounded-4">
+                <img
+                  class="img-fluid"
+                  src="./assets/blog-1.avif"
+                  alt="Blog image"
+                />
+                <div class="p-4">
+                  <h6 class="text-black-50 mb-4">19 de Enero 2022</h6>
+                  <h4 class="mb-4">
+                    Cómo un cliente aumento sus ventas gracias a tener un mejor
+                    catálogo de productos
+                  </h4>
+                  <p class="text-black-50">
+                    Ve como un cliente pudo mejorar sus ventas al utilizar
+                    nuestro servicio.
+                  </p>
+                  <a href="/" class="btn px-0">Leer Más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer class="bg-primary text-white">
+      <div class="container text-center py-3">
+        <h6>Copyright 2023, MiWeb.com</h6>
+      </div>
+    </footer>
     <script src="./bootstrap.bundle.min.js"></script>
   </body>
 </html>
