--- a/src/catalogos.html
+++ b/src/catalogos.html
@@ -11,7 +11,7 @@
     <header class="p-2 bg-primary">
       <nav class="container navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Mi Web</a>
+          <a class="navbar-brand" href="./index.html">Mi Web</a>
           <button
             class="navbar-toggler"
             type="button"
