--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Integrador</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <!-- Navbar -->
     <header class="p-2 bg-primary">
       <nav class="container navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Mi Web</a>
+          <a class="navbar-brand" href="./index.html">Mi Web</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -26,7 +27,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./index.html"
                   >Inicio</a
                 >
               </li>
@@ -34,7 +38,9 @@
                 <a class="nav-link" href="./catalogos.html">Catálogos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./crear-catalogo.html">Crear catálogo</a>
+                <a class="nav-link" href="./crear-catalogo.html"
+                  >Crear catálogo</a
+                >
               </li>
             </ul>
             <a class="btn btn-secondary me-4" href="./iniciar-sesion.html"
@@ -55,7 +61,10 @@
               Decide como quieres mostrar tus productos, crea tus catálogos de
               manera rápida y sencilla.
             </p>
-            <a class="btn btn-secondary rounded-pill py-2 px-4 me-3" href="./catalogos.html">
+            <a
+              class="btn btn-secondary rounded-pill py-2 px-4 me-3"
+              href="./catalogos.html"
+            >
               Ver catálogos
             </a>
           </div>
@@ -79,7 +88,7 @@
         </h2>
         <div class="container">
           <div class="row">
-            <div class="col-12 col-md-6 col-xl-4 p-2">
+            <div class="col-12 col-md-6 col-xl-4 p-2 feature-card">
               <div class="bg-white p-4 rounded-3 shadow-sm">
                 <img
                   class="mb-3"
@@ -95,7 +104,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-4 p-2">
+            <div class="col-12 col-md-6 col-xl-4 p-2 feature-card">
               <div class="bg-white p-4 rounded-3 shadow-sm">
                 <img
                   class="mb-3"
@@ -111,7 +120,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-4 p-2">
+            <div class="col-12 col-md-6 col-xl-4 p-2 feature-card">
               <div class="bg-white p-4 rounded-3 shadow-sm">
                 <img
                   class="mb-3"
@@ -127,7 +136,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-4 p-2">
+            <div class="col-12 col-md-6 col-xl-4 p-2 feature-card">
               <div class="bg-white p-4 rounded-3 shadow-sm">
                 <img
                   class="mb-3"
@@ -143,7 +152,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-4 p-2">
+            <div class="col-12 col-md-6 col-xl-4 p-2 feature-card">
               <div class="bg-white p-4 rounded-3 shadow-sm">
                 <img
                   class="mb-3"
@@ -159,7 +168,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-4 p-2">
+            <div class="col-12 col-md-6 col-xl-4 p-2 feature-card">
               <div class="bg-white p-4 rounded-3 shadow-sm">
                 <img
                   class="mb-3"
@@ -408,5 +417,7 @@
       </div>
     </footer>
     <script src="./bootstrap.bundle.min.js"></script>
+    <script src="./jquery.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
