--- a/src/iniciar-sesion.html
+++ b/src/iniciar-sesion.html
@@ -10,33 +10,45 @@
     class="bg-primary d-flex justify-content-center align-items-center"
     style="height: 100vh"
   >
-    <main class="mx-4 container bg-white p-4 rounded-3" style="max-width: 35rem">
+    <form
+      class="mx-4 container bg-white p-4 rounded-3"
+      style="max-width: 35rem"
+      id="login-form"
+    >
       <h3 class="text-center mb-5">Iniciar sesión</h3>
-      <div class="mb-4">
-        <label for="email" class="form-label">Correo</label>
+      <div class="form-floating mb-4">
         <input
           type="email"
           class="form-control"
           id="email"
           placeholder="tucorreo@gmail.com"
         />
+        <label for="email" class="form-label">Correo</label>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
+      <div class="form-floating mb-3">
         <input
           type="password"
           class="form-control"
           id="password"
+          placeholder="Password"
         />
+        <label for="password" class="form-label">Contraseña</label>
       </div>
-      <div class="row justify-content-center mt-5 mb-2 ">
-        <button class="btn btn-secondary col-11 px-5 py-2 rounded-pill">
+      <div class="row justify-content-center mt-5 mb-2">
+        <button
+          type="submit"
+          class="btn btn-secondary col-11 px-5 py-2 rounded-pill"
+        >
           Iniciar Sesión
         </button>
       </div>
       <div class="d-flex justify-content-center mt-4">
-        <a class="btn" href="./registrarse.html" style="color: #2563eb;">No tienes cuenta, registrate</>
+        <a class="btn" href="./registrarse.html" style="color: #2563eb"
+          >No tienes cuenta, registrate</a
+        >
       </div>
-    </main>
+    </form>
+    <script src="./jquery.js"></script>
+    <script src="./iniciar-sesion.js"></script>
   </body>
 </html>
