--- a/src/registrarse.html
+++ b/src/registrarse.html
@@ -10,42 +10,57 @@
     class="bg-primary d-flex justify-content-center align-items-center"
     style="height: 100vh"
   >
-    <main class="mx-4 container bg-white p-4 rounded-3" style="max-width: 35rem">
+    <form
+      class="mx-4 container bg-white p-4 rounded-3"
+      style="max-width: 35rem"
+      id="register-form"
+    >
       <h3 class="text-center mb-5">Registrarse</h3>
-      <div class="mb-4">
-        <label for="name" class="form-label">Nombre</label>
+      <div class="form-floating mb-4">
         <input
           type="text"
           class="form-control"
           id="name"
           placeholder="Nombre"
+          required
         />
+        <label for="name" class="form-label">Nombre</label>
       </div>
-      <div class="mb-4">
-        <label for="email" class="form-label">Correo</label>
+      <div class="form-floating mb-4">
         <input
           type="email"
           class="form-control"
           id="email"
           placeholder="tucorreo@gmail.com"
+          required
         />
+        <label for="email" class="form-label">Correo</label>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
+      <div class="form-floating mb-3">
         <input
           type="password"
           class="form-control"
           id="password"
+          placeholder="Password"
+          required
         />
+        <label for="password" class="form-label">Contraseña</label>
       </div>
-      <div class="row justify-content-center mt-5 mb-2 ">
-        <button class="btn btn-secondary col-11 px-5 py-2 rounded-pill">
+      <div class="row justify-content-center mt-5 mb-2">
+        <button
+          type="submit"
+          class="btn btn-secondary col-11 px-5 py-2 rounded-pill"
+        >
           Registrarse
         </button>
       </div>
       <div class="d-flex justify-content-center mt-4">
-        <a class="btn" href="./iniciar-sesion.html" style="color: #2563eb;">Ya tienes cuenta, inicia sesión</>
+        <a class="btn" href="./iniciar-sesion.html" style="color: #2563eb"
+          >Ya tienes cuenta, inicia sesión</a
+        >
       </div>
-    </main>
+    </form>
+    <script src="jquery.js"></script>
+    <script src="./registrarse.js"></script>
   </body>
 </html>
