--- a/src/crear-catalogo.html
+++ b/src/crear-catalogo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crear catalogo</title>
     <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="./crear-catalogo.css">
+    <link rel="stylesheet" href="./crear-catalogo.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -112,40 +112,62 @@
             />
             <label for="productPrice">Precio</label>
           </div>
-          <div class="mt-4">
+          <div class="mt-4 d-flex flex-column gap-3 flex-sm-row">
             <button class="btn btn-secondary px-4">Agregar producto</button>
           </div>
         </form>
         <div class="mt-4">
           <h4 class="text-center">Mis productos</h4>
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Imagen</th>
-                <th scope="col">ID</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Descripcion</th>
-                <th scope="col">Precio</th>
-              </tr>
-            </thead>
-            <tbody id="table-body">
-              <tr>
-                <th scope="row">1</th>
-                <td>
-                  <img
-                    class="table-image"
-                    src="./assets/clothes-1.avif"
-                    alt="ropa"
-                  />
-                </td>
-                <td>1</td>
-                <td>Producto 1</td>
-                <td>Descripcion del producto 1</td>
-                <td>10.90 Bs.</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="d-flex flex-column gap-3 flex-sm-row justify-content-sm-end ">
+            <button
+              type="button"
+              class="btn btn-outline-danger px-4"
+              onclick="eliminar()"
+            >
+              Eliminar seleccionados
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger px-4"
+              onclick="eliminarTodo()"
+            >
+              Eliminar todo
+            </button>
+          </div>
+          <div class="mt-3 overflow-x-scroll">
+            <table class="table table-hover table-bordered">
+              <caption class="text-end p-3">
+                <span id="total">1</span>
+                productos en inventario
+              </caption>
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Imagen</th>
+                  <th scope="col">ID</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Descripcion</th>
+                  <th scope="col">Precio</th>
+                </tr>
+              </thead>
+              <tbody id="table-body">
+                <tr onclick="resaltar(this)">
+                  <th scope="row">1</th>
+                  <td>
+                    <img
+                      class="table-image"
+                      src="./assets/clothes-1.avif"
+                      alt="ropa"
+                    />
+                  </td>
+                  <td>1</td>
+                  <td>Producto 1</td>
+                  <td>Descripcion del producto 1</td>
+                  <td>10.90 Bs.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </section>
     </main>
