Cambios sugeridos agregados

--- a/src/catalogo.html
+++ b/src/catalogo.html
@@ -53,54 +53,7 @@
       <section>
         <div class="container">
           <h1 class="text-center my-4">Ropa</h1>
-          <div class="row d-flex align-items-center">
-            <div class="col-12 col-lg-6 p-4">
-              <img class="img-thumbnail" src="./assets/clothes-1.avif" alt="" />
-            </div>
-            <div class="col-12 col-lg-6 p-4">
-              <h2 class="text-center">Chamarra</h2>
-              <p class="text-black-50 text-center">Más vendido</p>
-              <p class="my-5 text-black-50">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Maiores, quasi itaque, quo doloribus incidunt nam est
-                laudantium, at quidem fuga ullam. Architecto tempore animi
-                nostrum harum libero quaerat eaque consequatur!
-              </p>
-              <div
-                class="btn-toolbar mb-3 d-flex justify-content-between"
-                role="toolbar"
-              >
-                <div class="btn-group me-2" role="group">
-                  <button type="button" class="btn btn-outline-dark">S</button>
-                  <button type="button" class="btn btn-outline-dark">M</button>
-                  <button type="button" class="btn btn-outline-dark">L</button>
-                  <button type="button" class="btn btn-outline-dark">XL</button>
-                </div>
-                <div class="d-flex align-items-center mx-4">
-                  <div
-                    class="rounded-circle me-3"
-                    style="width: 1rem; height: 1rem; background-color: black"
-                  ></div>
-                  <div
-                    class="rounded-circle me-3"
-                    style="width: 1rem; height: 1rem; background-color: green"
-                  ></div>
-                  <div
-                    class="rounded-circle me-3"
-                    style="width: 1rem; height: 1rem; background-color: blue"
-                  ></div>
-                  <div
-                    class="rounded-circle me-3"
-                    style="width: 1rem; height: 1rem; background-color: brown"
-                  ></div>
-                  <div
-                    class="rounded-circle border"
-                    style="width: 1rem; height: 1rem; background-color: white"
-                  ></div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="row d-flex align-items-center" id="main-product"></div>
         </div>
       </section>
       <!-- Other clothes -->
