--- a/src/catalogos.html
+++ b/src/catalogos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catálogos</title>
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="catalogos.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -73,217 +74,7 @@
       <section class="mb-5">
         <div class="container">
           <h2 class="mb-4 text-center">Lista de catálogos</h2>
-          <div class="row">
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/catalog-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Mi tienda de ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    En nuestra tienda nos dedicamos a encontrarte la ropa que te
-                    gusta y que te queda mejor a ti...
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver catálogo</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="row" id="catalogos"></div>
         </div>
       </section>
     </main>
@@ -294,5 +85,7 @@
       </div>
     </footer>
     <script src="./bootstrap.bundle.min.js"></script>
+    <script src="./jquery.js"></script>
+    <script src="./catalogos.js"></script>
   </body>
 </html>
