--- a/src/registrarse.html
+++ b/src/registrarse.html
@@ -43,6 +43,8 @@
           id="password"
           placeholder="Password"
           required
+          minlength="6"
+          maxlength="8"
         />
         <label for="password" class="form-label">Contraseña</label>
       </div>
